# Multi-Tenant-Saas-application

./: .ci  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  start_celery.sh
app/: main.py  utils.py
app/apiRoute/: __init__.py  deps.py
app/apiRoute/v1/: api.py
app/core/: config.py  security.py
app/crud/: base.py  crud_tenant.py  crud_user.py
app/db/: base_class.py  session.py
app/middleware/: tenant_middleware.py
app/models/: master.py  tenancy.py  tenant.py  user.py
app/models/migrations/: env.py
app/schemas/: tenant.py  token.py  user.py
app/services/: user_service.py
migrations/: env.py
migrations/master/: 137c02d1be2e_initial_migration.py  788d6980b917_update_subscription_with_payment.py  9d165163920e_modify_tenantsubscription.py  eb001d32ad2e_initial_migration.py
migrations/tenant/: 167f3ea201c9_initial_migration.py  388ce9073b63_modify_organization_models.py  a495dc7ddb4b_againmodify_organization_models.py  d36727b3b209_modify_tenant_relations.py  e8ceeed51666_modify_organization_models.py  f4a7a186e01e_modify_tenant_relations.py
src/: celery_app.py  main.py
src/api/master_api/: __init__.py  auth.py  subscription.py  user.py
src/commands/: create_super_admin.py  create_tenant_database.py
src/core/: config.py  database_manager.py
src/middlewares/: __init__.py
src/models/: master_models.py  tenant_models.py
src/services/: master_service.py  tenant_service.py
src/utils/: email_utils.py  file_utils.py  otp_utils.py  security.py
(+10 files in other folders)
